fix overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+#__next {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 body.cursor-col-resize,
 body.cursor-col-resize * {
   cursor: col-resize !important;
